Fri Jun 27 14:04:41 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * MPC/config/dcps_reliable_multicast.mpb:

          Modified to inherit from dcps (since the library project does the
          same).

        * MPC/config/dcpsexe_with_reliable_multicast.mpb:

          Removed the addition of ReliableMulticast to libs and after, since
          it inherits from dcps_reliable_multicast.

        * tests/transport/reliable_multicast/reliable_multicast.mpc:

          Modified to inherit from dcps_reliable_multicast instead of adding
          the ReliableMulticast library manually.

        * MPC/config/dcps_ts_defaults.mpb:

          Modified to indicate a source, header and generic output
          extension for the change below.

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * bin/DCPS/IDLTemplate.pm:
        * bin/dcps_ts.pl:

          Modified this script to create a single idl, header, and source
          file no matter how many types are contained within the input idl
          file.  This allows the output file names to be based upon the
          input file name (instead of the types found in the idl file).

        * bin/update_dcps.pl:

          This new script updates MPC and C++ source files to use the new
          dcps_ts.pl output file names.  It only truly works if you allow it
          to work on the directory so that it can edit the MPC files and
          with knowlege gained from that, edit the C++ source files.

        * DevGuideExamples/DCPS/Messenger/DataReaderListener.cpp:
        * DevGuideExamples/DCPS/Messenger/Messenger.mpc:
        * DevGuideExamples/DCPS/Messenger/StackDataReaderListener.cpp:
        * DevGuideExamples/DCPS/Messenger/Writer.cpp:
        * DevGuideExamples/DCPS/Messenger/publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/stack_subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger/subscriber.cpp: